Fixed MAPK ppotential big

--- a/examples/tests/integratorMAPK.ipynb
+++ b/examples/tests/integratorMAPK.ipynb
@@ -23,8 +23,8 @@
    "source": [
     "# Define arbitrarily large list of patchy particles\n",
     "np.random.seed(seed=1) # seed 1 good used for pentameric ring formation \n",
-    "numparticles = 2\n",
-    "boxsize = 2.5\n",
+    "numparticles = 3\n",
+    "boxsize = 2.3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
@@ -53,17 +53,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alternative fixed position set up\n",
-    "position1 = np.array([0.0, 0.0, 0.0]);\n",
-    "position2 = np.array([np.cos(np.pi/4), np.sin(-np.pi/4), 0]);\n",
-    "position3 = np.array([1, 0, 0]);\n",
-    "orientation1 = np.array([1.0, 0.0, 0.0, 0.0]);\n",
-    "orientation2 = np.array([np.cos(np.pi/2), 0.0, 0.0, np.sin(np.pi/2)]);\n",
-    "orientation3 = np.array([1.0, 0.0, 0.0, 0.0]);\n",
-    "part1 = msmrd2.particle(0,0,D, Drot, position1, orientation1)\n",
-    "part2 = msmrd2.particle(1,0,D, Drot, position2, orientation2)\n",
-    "part3 = msmrd2.particle(2,0,D, Drot, position3, orientation3)\n",
-    "pyPartlist = [part1, part2, part3] "
+    "# alternative fixed position set up (for testing)\n",
+    "#position1 = np.array([0.0, 0.0, 0.0]);\n",
+    "#position2 = np.array([np.cos(np.pi/4), np.sin(-np.pi/4), 0]);\n",
+    "#position3 = np.array([1, 0, 0]);\n",
+    "#orientation1 = np.array([1.0, 0.0, 0.0, 0.0]);\n",
+    "#orientation2 = np.array([np.cos(np.pi/2), 0.0, 0.0, np.sin(np.pi/2)]);\n",
+    "#orientation3 = np.array([1.0, 0.0, 0.0, 0.0]);\n",
+    "#part1 = msmrd2.particle(0,0,D, Drot, position1, orientation1)\n",
+    "#part2 = msmrd2.particle(1,0,D, Drot, position2, orientation2)\n",
+    "#part3 = msmrd2.particle(2,0,D, Drot, position3, orientation3)\n",
+    "#pyPartlist = [part1, part2, part3] "
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = -1 # seed = -1 uses random device as seed\n",
+    "seed = 5 #-1 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "anglePatches = np.pi/2\n",
     "reactivationRateK = 1.0\n",
@@ -135,8 +135,8 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 5000000\n",
-    "stride = 250 #250 #1000\n",
+    "timesteps = 500000 #5000000\n",
+    "stride = 250 #1 #250 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -213,14 +213,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integrate particle list and print only positions of first and last particle in list\n",
-    "timesteps = 100\n",
-    "print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position 2\"))\n",
-    "for i in range(timesteps):\n",
-    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[1].position)))\n",
-    "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].state), str(partlist[1].state)))\n",
+    "## Integrate particle list and print only positions of first and last particle in list\n",
+    "#timesteps = 100\n",
+    "#print('{:<10s}{:<15s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Position 2\"))\n",
+    "#for i in range(timesteps):\n",
+    "#    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].position), str(partlist[1].position)))\n",
+    "#    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator.clock, str(partlist[0].state), str(partlist[1].state)))\n",
     "\n",
-    "    integrator.integrate(partlist)"
+    "#    integrator.integrate(partlist)"
    ]
   },
   {
