Added Langevin integrator

--- a/examples/tests/integratorMAPK.ipynb
+++ b/examples/tests/integratorMAPK.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alternative fixed position set up (for testing)\n",
+    "# Alternative fixed position set up (for testing)\n",
     "#position1 = np.array([0.0, 0.0, 0.0]);\n",
     "#position2 = np.array([np.cos(np.pi/4), np.sin(-np.pi/4), 0]);\n",
     "#position3 = np.array([1, 0, 0]);\n",
@@ -85,7 +85,7 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 5 #-1 # seed = -1 uses random device as seed\n",
+    "seed = 9 #-1 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "anglePatches = np.pi/2\n",
     "reactivationRateK = 1.0\n",
@@ -135,8 +135,8 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 500000 #5000000\n",
-    "stride = 250 #1 #250 #250 #1000\n",
+    "timesteps = 5000000 #5000000\n",
+    "stride = 500 #250 #1 #250 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -222,13 +222,6 @@
     "\n",
     "#    integrator.integrate(partlist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
