Fixed minor WCA evaluate bug

--- a/examples/models/langevinWCA.ipynb
+++ b/examples/models/langevinWCA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Langevin integrator with Lennard-Jones potential\n",
+    "# Langevin integrator with WCA potential\n",
     "\n",
     "Simple implementation of two particles following Langevin dynamics"
    ]
@@ -20,7 +20,7 @@
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
     "from msmrd2.integrators import langevin \n",
-    "from msmrd2.potentials import lennardJones"
+    "from msmrd2.potentials import WCA"
    ]
   },
   {
@@ -97,10 +97,10 @@
    "source": [
     "# Define Lennard-Jones potential (rm=2^(1/6)sigma)\n",
     "epsilon = 1.0\n",
-    "rm = 1.0\n",
+    "rm = 0.5\n",
     "sigma = rm * 2**(-1/6)\n",
-    "potentialLJ = lennardJones(epsilon, sigma)\n",
-    "integrator.setPairPotential(potentialLJ)"
+    "potentialWCA = WCA(epsilon, sigma)\n",
+    "integrator.setPairPotential(potentialWCA)"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
     "timesteps = 200000\n",
     "stride = 20\n",
-    "datafile  = open('../../data/vmd/langevinLennardJones.xyz', 'w')\n",
+    "datafile  = open('../../data/vmd/langevinWCA.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(len(partlist)) + '\\n')\n",
@@ -135,8 +135,8 @@
    "outputs": [],
    "source": [
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_sphericalParticles(numparticles = numparticles, outfname = \"langevinLennardJones\", \n",
-    "                              tclfname = \"../../data/vmd/langevinLennardJones_2vmd.tcl\")"
+    "msmrdvis.generateTCL_sphericalParticles(numparticles = numparticles, outfname = \"langevinWCA\", \n",
+    "                              tclfname = \"../../data/vmd/langevinWCA_2vmd.tcl\")"
    ]
   },
   {
@@ -186,22 +186,22 @@
     "rm = 1.0\n",
     "sigma = rm * 2**(-1/6)\n",
     "cutOff = 5\n",
-    "potentialLJ = lennardJones(epsilon, sigma, cutOff)\n",
+    "potentialWCA = WCA(epsilon, sigma)\n",
     "\n",
     "# Construct evaluate function\n",
-    "def lennardJonesEvaluate(r):\n",
+    "def WCAevaluate(r):\n",
     "    p1 = np.zeros(3)\n",
     "    p2 = np.array([r,0,0])\n",
     "    vel = np.zeros(3)\n",
     "    part1 = msmrd2.particle(1.0, p1, vel, 1)\n",
     "    part2 = msmrd2.particle(1.0, p2, vel, 1)\n",
-    "    return potentialLJ.evaluate(part1, part2)\n",
+    "    return potentialWCA.evaluate(part1, part2)\n",
     "\n",
     "rarray = np.linspace(0.1,5,100)\n",
-    "VLJ = [lennardJonesEvaluate(r) for r in rarray]\n",
-    "plt.plot(rarray, VLJ)\n",
+    "V_WCA = [WCAevaluate(r) for r in rarray]\n",
+    "plt.plot(rarray, V_WCA)\n",
     "plt.xlabel(\"Distance r\")\n",
-    "plt.ylabel(\"LJ potential\")\n",
+    "plt.ylabel(\"WCA potential\")\n",
     "plt.ylim([-1.5,3])\n",
     "plt.show()"
    ]
