Updates to MAPK potential params and nbook

--- a/examples/tests/integratorMAPK.ipynb
+++ b/examples/tests/integratorMAPK.ipynb
@@ -23,8 +23,11 @@
    "source": [
     "# Define arbitrarily large list of patchy particles\n",
     "np.random.seed(seed=1) # seed 1 good used for pentameric ring formation \n",
-    "numparticles = 3\n",
-    "boxsize = 2.3\n",
+    "numMAPKs = 1\n",
+    "numKinases = 3\n",
+    "numPhosphatases = 2\n",
+    "numparticles = numMAPKs + numKinases + numPhosphatases\n",
+    "boxsize = 4 #2.3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
@@ -43,7 +46,14 @@
     "                \n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
-    "    part = msmrd2.particle(i, 0, D, Drot, position, orientation)\n",
+    "    # ptype = i\n",
+    "    if i+1 <= numMAPKs:\n",
+    "        ptype = 0\n",
+    "    elif i+1 <= numMAPKs + numKinases:\n",
+    "        ptype = 1\n",
+    "    else: \n",
+    "        ptype = 2\n",
+    "    part = msmrd2.particle(ptype, 0, D, Drot, position, orientation)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -85,7 +95,7 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 9 #-1 # seed = -1 uses random device as seed\n",
+    "seed = -1 #9 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "anglePatches = np.pi/2\n",
     "reactivationRateK = 1.0\n",
@@ -117,7 +127,7 @@
    "source": [
     "# Define MAPK potntial based on patchy particles\n",
     "sigma = 1.0\n",
-    "strength = 60 #65\n",
+    "strength = 100 #60 #65\n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([np.cos(anglePatches/2), np.sin(anglePatches/2), 0.]), \n",
     "                       np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.])]\n",
@@ -135,12 +145,12 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 5000000 #5000000\n",
-    "stride = 500 #250 #1 #250 #250 #1000\n",
+    "timesteps = 2500000 #5000000\n",
+    "stride = 250 #500 #250 #1 #250 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
-    "        datafile.write(str(9) + '\\n')\n",
+    "        datafile.write(str(5*numMAPKs + 2*(numKinases + numPhosphatases)) + '\\n')\n",
     "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        if i%stride == 0:\n",
@@ -222,6 +232,81 @@
     "\n",
     "#    integrator.integrate(partlist)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate potential and plot\n",
+    "\n",
+    "Plots the potential for the case when bidning sites i3 and i4 are aligned in one axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define MAPK potntial based on patchy particles\n",
+    "sigma = 1.0\n",
+    "strength = 100\n",
+    "anglePatches = np.pi/2\n",
+    "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
+    "patchesCoordinates1 = [np.array([np.cos(anglePatches/2), np.sin(anglePatches/2), 0.]), \n",
+    "                       np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.])]\n",
+    "patchesCoordinates2 = [ np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.]) ]\n",
+    "\n",
+    "# Calculate potential for aligned molecules interaction between MAPK and kinase (same for phosphatase)\n",
+    "potentialPatchyProteinMAPKalt = patchyProteinMAPK(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
+    "\n",
+    "def patchyProteinMAPKevaluate(p1,p2,or1,or2):\n",
+    "    part1 = msmrd2.particle(0, 0, 1.0, 1.0, p1, or1)\n",
+    "    part2 = msmrd2.particle(1, 0, 1.0, 1.0, p2, or2)\n",
+    "    return potentialPatchyProteinMAPKalt.evaluate(part1, part2)\n",
+    "\n",
+    "dist = np.arange(0,5, 0.01)\n",
+    "pos1 = np.array([0, 0., 0.])\n",
+    "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
+    "\n",
+    "# Orientation of particle 1 to align binding site to x-axis \n",
+    "axisAngle = np.array([0,0,anglePatches/2]) \n",
+    "orientation1 = quats.angle2quat(axisAngle)\n",
+    "\n",
+    "# Orientation of particle 2 to align binding site to x-axis (facing opposite direction) \n",
+    "axisAngle2 = np.array([0,0,anglePatches/2 - np.pi]) \n",
+    "orientation2 = quats.angle2quat(axisAngle2)\n",
+    "\n",
+    "potentialAligned = [patchyProteinMAPKevaluate(pos1,p2,orientation1,orientation2) for p2 in pos2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot potential\n",
+    "plt.figure(figsize=(7,5))\n",
+    "fsize = 22\n",
+    "plt.rcParams.update({'font.size': fsize})\n",
+    "plt.plot(dist, potentialAligned, label = r'aligned MAPK and kinase', lw =2)\n",
+    "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
+    "#plt.legend(fancybox=True)\n",
+    "plt.legend(fontsize=28, labelspacing=2, framealpha=1.0, edgecolor='white', fancybox=True, bbox_to_anchor=(1.3, 1.0))\n",
+    "plt.xlim([0,5])\n",
+    "plt.xlabel(r'Relative distance')\n",
+    "plt.ylabel(r'Potential')\n",
+    "plt.yticks([])\n",
+    "#plt.savefig('patchyParticles_potential.pdf', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
