INCOMPLETE, bug in samplediscretestate for MAPK...
...WIP

--- a/examples/applications/MAPK/integratorMAPK.ipynb
+++ b/examples/applications/MAPK/integratorMAPK.ipynb
@@ -24,13 +24,15 @@
     "# Define arbitrarily large list of patchy particles\n",
     "np.random.seed(seed=1) # seed 1 good used for pentameric ring formation \n",
     "numMAPKs = 1\n",
-    "numKinases = 3\n",
-    "numPhosphatases = 2\n",
+    "numKinases = 1 #3\n",
+    "numPhosphatases = 0 #2\n",
     "numparticles = numMAPKs + numKinases + numPhosphatases\n",
     "boxsize = 4 #2.3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
+    "anglePatches = np.pi/2\n",
+    "orientvector = np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.]) # same as patches coordinates 2\n",
     "\n",
     "for i in range(numparticles):    \n",
     "    overlap = True\n",
@@ -54,6 +56,9 @@
     "    else: \n",
     "        ptype = 2\n",
     "    part = msmrd2.particle(ptype, 0, D, Drot, position, orientation)\n",
+    "    if ptype == 1 or ptype == 2:\n",
+    "        rotOrientvector = msmrd2.tools.rotateVec(orientvector, orientation)\n",
+    "        part.setOrientVector(rotOrientvector)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -97,7 +102,6 @@
     "dt = 0.00001 #0.000005\n",
     "seed = -1 #9 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
-    "anglePatches = np.pi/2\n",
     "reactivationRateK = 1.0\n",
     "reactivationRateP = 1.0\n",
     "mapkIndex = [0]\n",
@@ -116,7 +120,8 @@
    "source": [
     "# Define boundary (choose either spherical or box)\n",
     "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
-    "integrator.setBoundary(boxBoundary)"
+    "integrator.setBoundary(boxBoundary)\n",
+    "integrator.disableDeactivation()"
    ]
   },
   {
@@ -145,9 +150,9 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 2500000 #5000000\n",
+    "timesteps = 250000 #5000000\n",
     "stride = 250 #500 #250 #1 #250 #250 #1000\n",
-    "datafile  = open('../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
+    "datafile  = open('../../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(5*numMAPKs + 2*(numKinases + numPhosphatases)) + '\\n')\n",
@@ -202,7 +207,7 @@
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_patchyProteinMAPK(numparticles = numparticles, \n",
     "                                    outfname = \"patchyProteinMAPK\", \n",
-    "                                    tclfname = \"../../data/vmd/patchyProteinMAPK_2vmd.tcl\")\n",
+    "                                    tclfname = \"../../../data/vmd/patchyProteinMAPK_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
