added units to MAPK exaple

--- a/examples/applications/MAPK/integratorMAPK.ipynb
+++ b/examples/applications/MAPK/integratorMAPK.ipynb
@@ -16,20 +16,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Units\n",
+    "\n",
+    "### Boltzman constant\n",
+    "- $k_B = 1.38064852 \\times 10^{-23} \\frac{m^2}{s^2} \\frac{kg}{K} \\left(= \\frac{nm^2}{ns^2}\\frac{kg}{K}\\right)$.\n",
+    "\n",
+    "### Basic units\n",
+    "- Length (l): nanometers (nm)\n",
+    "- Energy ($\\epsilon$) : $k_B T = kg \\frac{nm^2}{ns^2}$\n",
+    "- Mass (m): kilogram (kg)\n",
+    "\n",
+    "### Derived units\n",
+    "- Time: $l\\sqrt{m/\\epsilon} = nm$\n",
+    "- Temperature: $\\epsilon/k_B =$ Kelvin ($K$)\n",
+    "- Force: $\\epsilon/l = kg \\frac{nm}{ns^2}$\n",
+    "\n",
+    "### Reduced quantities (dimensionless)\n",
+    "- Reduced pair potential: $U^* = U/\\epsilon$\n",
+    "- Reduced distance: $r^* = r/l$\n",
+    "- Reduced density: $\\rho^*=\\rho l^3$\n",
+    "- Reduced Temperature: $T^* = k_B T/\\epsilon$\n",
+    "- Reduced Pressure: $P^* = Pl^3/\\epsilon$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define arbitrarily large list of patchy particles\n",
-    "np.random.seed(seed=1) # seed 1 good used for pentameric ring formation \n",
+    "# Define main variables and parameters\n",
     "numMAPKs = 1\n",
     "numKinases = 1 #3\n",
     "numPhosphatases = 0 #2\n",
     "numparticles = numMAPKs + numKinases + numPhosphatases\n",
-    "boxsize = 4 #2.3\n",
-    "D = 1.0\n",
-    "Drot = 1.0\n",
+    "sigma = 5.0 #(nanometers) particles diameters\n",
+    "boxsize = 15 #50 #(nanometers) #2.3\n",
+    "D = 1.0E-3 #(nm^2/ns) Note 1.0E-3 nm^2/ns = 1 micrometer^2/s\n",
+    "Drot = 1.6E-4 #(rad^2/ns) Note 1.6E-4 rad^2/ns = 1.6E5 rad^2/s\n",
+    "kB = 1.38064852E-23 #(Boltzmann constant (nm^2/ns^2 * kg/K))\n",
+    "Temp = 300 #(Kelvin)\n",
+    "\n",
+    "# Define arbitrarily large list of patchy particles\n",
+    "np.random.seed(seed=1) \n",
     "pyPartlist = [] \n",
     "anglePatches = np.pi/2\n",
     "orientvector = np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.]) # same as patches coordinates 2\n",
@@ -42,7 +74,7 @@
     "                             boxsize*np.random.rand()-0.5*boxsize])\n",
     "        overlap = False     \n",
     "        for j in range(len(pyPartlist)):\n",
-    "            if np.linalg.norm(position - pyPartlist[j].position) < 2.0:\n",
+    "            if np.linalg.norm(position - pyPartlist[j].position) < sigma:\n",
     "                overlap = True\n",
     "                continue\n",
     "                \n",
@@ -99,17 +131,18 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.00001 #0.000005\n",
+    "dt = 0.001 # (nanoseconds)\n",
     "seed = -1 #9 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
-    "reactivationRateK = 1.0\n",
-    "reactivationRateP = 1.0\n",
+    "trel = 1000 # (nanoseconds) Note 1000 ns = 1 micro second. Can be varied up to 10 miliseconds\n",
+    "reactivationRateK = np.log(2)/trel \n",
+    "reactivationRateP = np.log(2)/trel\n",
     "mapkIndex = [0]\n",
     "kinaseIndex = [1]\n",
     "phosIndex = [2]\n",
-    "integrator = integratorMAPK(dt, seed, bodytype, anglePatches, reactivationRateK, reactivationRateP, \n",
+    "integrator = integratorMAPK(dt, seed, bodytype, anglePatches, reactivationRateK, reactivationRateP, sigma,\n",
     "                            mapkIndex, kinaseIndex, phosIndex) \n",
-    "#integrator.setKbT(0.1)"
+    "integrator.setKbT(kB * Temp)"
    ]
   },
   {
@@ -121,7 +154,7 @@
     "# Define boundary (choose either spherical or box)\n",
     "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
     "integrator.setBoundary(boxBoundary)\n",
-    "integrator.disableDeactivation()"
+    "#integrator.disableDeactivation()"
    ]
   },
   {
@@ -131,8 +164,7 @@
    "outputs": [],
    "source": [
     "# Define MAPK potntial based on patchy particles\n",
-    "sigma = 1.0\n",
-    "strength = 100 #60 #65\n",
+    "strength = 1 #60 #65\n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([np.cos(anglePatches/2), np.sin(anglePatches/2), 0.]), \n",
     "                       np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.])]\n",
@@ -150,8 +182,8 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 250000 #5000000\n",
-    "stride = 250 #500 #250 #1 #250 #250 #1000\n",
+    "timesteps = 10000000 #250000 #5000000 \n",
+    "stride = 250 #250 #1 #250 #250 #1000\n",
     "datafile  = open('../../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -161,8 +193,8 @@
     "        if i%stride == 0:\n",
     "            if part.type == 0:\n",
     "                v0 = part.position\n",
-    "                v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates1[0], part.orientation)\n",
-    "                v2 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates1[1], part.orientation)\n",
+    "                v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates1[0], part.orientation)\n",
+    "                v2 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates1[1], part.orientation)\n",
     "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "                if (part.state == 0):\n",
     "                    datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
@@ -187,7 +219,7 @@
     "            if part.type == 1:\n",
     "                v0 = part.position\n",
     "                if part.state == 0:\n",
-    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                    v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
     "                else:\n",
     "                    v1 = 1 * v0\n",
     "                datafile.write('type_3' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
@@ -195,14 +227,14 @@
     "            if part.type == 2:\n",
     "                v0 = part.position\n",
     "                if part.state == 0:\n",
-    "                    v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                    v1 = v0 + 0.5*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
     "                else:\n",
     "                    v1 = 1 * v0\n",
     "                datafile.write('type_4' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
     "                datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
-    "    if i%5000 == 0:\n",
-    "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
+    "    if i%(50*stride) == 0:\n",
+    "        print(\"Percentage complete: \", 100*i/timesteps, \"%  \", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_patchyProteinMAPK(numparticles = numparticles, \n",
@@ -254,8 +286,9 @@
    "outputs": [],
    "source": [
     "# Define MAPK potntial based on patchy particles\n",
-    "sigma = 1.0\n",
-    "strength = 100\n",
+    "sigma = 5.0\n",
+    "strength = 1\n",
+    "maxdistance = 5*sigma\n",
     "anglePatches = np.pi/2\n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([np.cos(anglePatches/2), np.sin(anglePatches/2), 0.]), \n",
@@ -270,7 +303,7 @@
     "    part2 = msmrd2.particle(1, 0, 1.0, 1.0, p2, or2)\n",
     "    return potentialPatchyProteinMAPKalt.evaluate(part1, part2)\n",
     "\n",
-    "dist = np.arange(0,5, 0.01)\n",
+    "dist = np.arange(0,maxdistance, 0.01)\n",
     "pos1 = np.array([0, 0., 0.])\n",
     "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
     "\n",
@@ -299,10 +332,10 @@
     "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
     "#plt.legend(fancybox=True)\n",
     "plt.legend(fontsize=28, labelspacing=2, framealpha=1.0, edgecolor='white', fancybox=True, bbox_to_anchor=(1.3, 1.0))\n",
-    "plt.xlim([0,5])\n",
+    "plt.xlim([0,maxdistance])\n",
     "plt.xlabel(r'Relative distance')\n",
-    "plt.ylabel(r'Potential')\n",
-    "plt.yticks([])\n",
+    "plt.ylabel(r'Potential ($k_B T$)')\n",
+    "#plt.yticks([])\n",
     "#plt.savefig('patchyParticles_potential.pdf', bbox_inches='tight')"
    ]
   },
