MAPK potential fully working with units

--- a/examples/applications/MAPK/integratorMAPK.ipynb
+++ b/examples/applications/MAPK/integratorMAPK.ipynb
@@ -36,6 +36,7 @@
     "\n",
     "### Reduced quantities (dimensionless)\n",
     "- Reduced pair potential: $U^* = U/\\epsilon$\n",
+    "- Reduced force: $F^* = F l/\\epsilon$\n",
     "- Reduced distance: $r^* = r/l$\n",
     "- Reduced density: $\\rho^*=\\rho l^3$\n",
     "- Reduced Temperature: $T^* = k_B T/\\epsilon$\n",
@@ -59,6 +60,9 @@
     "Drot = 1.6E-4 #(rad^2/ns) Note 1.6E-4 rad^2/ns = 1.6E5 rad^2/s\n",
     "kB = 1.38064852E-23 #(Boltzmann constant (nm^2/ns^2 * kg/K))\n",
     "Temp = 300 #(Kelvin)\n",
+    "# For computations, we assume kBT=1, thus the force F must be: F=kBT f, where f is the force computed \n",
+    "# from the potential. This means the plotted potential is on reduced units (not the distances though);\n",
+    "kBT = 1 \n",
     "\n",
     "# Define arbitrarily large list of patchy particles\n",
     "np.random.seed(seed=1) \n",
@@ -80,6 +84,7 @@
     "                \n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
+    "    position = np.array([0,0,0]) + i*np.array([0.8*sigma,0,0])\n",
     "    # ptype = i\n",
     "    if i+1 <= numMAPKs:\n",
     "        ptype = 0\n",
@@ -131,7 +136,7 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.001 # (nanoseconds)\n",
+    "dt = 0.1 # 0.001 (nanoseconds)\n",
     "seed = -1 #9 # seed = -1 uses random device as seed\n",
     "bodytype = 'rigidbody' # three rotational degrees of freedom\n",
     "trel = 1000 # (nanoseconds) Note 1000 ns = 1 micro second. Can be varied up to 10 miliseconds\n",
@@ -142,7 +147,7 @@
     "phosIndex = [2]\n",
     "integrator = integratorMAPK(dt, seed, bodytype, anglePatches, reactivationRateK, reactivationRateP, sigma,\n",
     "                            mapkIndex, kinaseIndex, phosIndex) \n",
-    "integrator.setKbT(kB * Temp)"
+    "integrator.setKbT(kBT) # Note we use 1 for computations of KbT"
    ]
   },
   {
@@ -164,7 +169,7 @@
    "outputs": [],
    "source": [
     "# Define MAPK potntial based on patchy particles\n",
-    "strength = 1 #60 #65\n",
+    "strength = 100 #60 #65\n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([np.cos(anglePatches/2), np.sin(anglePatches/2), 0.]), \n",
     "                       np.array([np.cos(-anglePatches/2), np.sin(-anglePatches/2), 0.])]\n",
@@ -183,7 +188,7 @@
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
     "timesteps = 10000000 #250000 #5000000 \n",
-    "stride = 250 #250 #1 #250 #250 #1000\n",
+    "stride = 250 #1 #250 #250 #1000\n",
     "datafile  = open('../../../data/vmd/patchyProteinMAPK.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -287,7 +292,7 @@
    "source": [
     "# Define MAPK potntial based on patchy particles\n",
     "sigma = 5.0\n",
-    "strength = 1\n",
+    "strength = 10\n",
     "maxdistance = 5*sigma\n",
     "anglePatches = np.pi/2\n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
@@ -334,7 +339,7 @@
     "plt.legend(fontsize=28, labelspacing=2, framealpha=1.0, edgecolor='white', fancybox=True, bbox_to_anchor=(1.3, 1.0))\n",
     "plt.xlim([0,maxdistance])\n",
     "plt.xlabel(r'Relative distance')\n",
-    "plt.ylabel(r'Potential ($k_B T$)')\n",
+    "plt.ylabel(r'Potential/$k_B T$ (reduced)')\n",
     "#plt.yticks([])\n",
     "#plt.savefig('patchyParticles_potential.pdf', bbox_inches='tight')"
    ]
