Discretization MAPK working full!

--- a/examples/applications/MAPK/integratorMAPK.ipynb
+++ b/examples/applications/MAPK/integratorMAPK.ipynb
@@ -84,7 +84,6 @@
     "                \n",
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
-    "    position = np.array([0,0,0]) + i*np.array([0.8*sigma,0,0])\n",
     "    # ptype = i\n",
     "    if i+1 <= numMAPKs:\n",
     "        ptype = 0\n",
@@ -159,7 +158,7 @@
     "# Define boundary (choose either spherical or box)\n",
     "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
     "integrator.setBoundary(boxBoundary)\n",
-    "#integrator.disableDeactivation()"
+    "integrator.disableMAPK()"
    ]
   },
   {
