Added msmrdMAPK integrator

--- a/examples/applications/MAPK/integratorMAPK.ipynb
+++ b/examples/applications/MAPK/integratorMAPK.ipynb
@@ -52,7 +52,7 @@
     "# Define main variables and parameters\n",
     "numMAPKs = 1\n",
     "numKinases = 1 #3\n",
-    "numPhosphatases = 0 #2\n",
+    "numPhosphatases = 1 #2\n",
     "numparticles = numMAPKs + numKinases + numPhosphatases\n",
     "sigma = 5.0 #(nanometers) particles diameters\n",
     "boxsize = 15 #50 #(nanometers) #2.3\n",
@@ -158,7 +158,7 @@
     "# Define boundary (choose either spherical or box)\n",
     "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
     "integrator.setBoundary(boxBoundary)\n",
-    "integrator.disableMAPK()"
+    "#integrator.disableMAPK()"
    ]
   },
   {
@@ -292,7 +292,7 @@
     "# Define MAPK potntial based on patchy particles\n",
     "sigma = 5.0\n",
     "strength = 10\n",
-    "maxdistance = 5*sigma\n",
+    "maxdistance = 4*sigma\n",
     "anglePatches = np.pi/2\n",
     "# This values are fixed and should match those used to determine metastable states in potential and trajectory.\n",
     "patchesCoordinates1 = [np.array([np.cos(anglePatches/2), np.sin(anglePatches/2), 0.]), \n",
@@ -303,7 +303,7 @@
     "potentialPatchyProteinMAPKalt = patchyProteinMAPK(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
     "\n",
     "def patchyProteinMAPKevaluate(p1,p2,or1,or2):\n",
-    "    part1 = msmrd2.particle(0, 0, 1.0, 1.0, p1, or1)\n",
+    "    part1 = msmrd2.particle(0, 1, 1.0, 1.0, p1, or1) # State one, so only one site active\n",
     "    part2 = msmrd2.particle(1, 0, 1.0, 1.0, p2, or2)\n",
     "    return potentialPatchyProteinMAPKalt.evaluate(part1, part2)\n",
     "\n",
@@ -337,7 +337,7 @@
     "#plt.legend(fancybox=True)\n",
     "plt.legend(fontsize=28, labelspacing=2, framealpha=1.0, edgecolor='white', fancybox=True, bbox_to_anchor=(1.3, 1.0))\n",
     "plt.xlim([0,maxdistance])\n",
-    "plt.xlabel(r'Relative distance')\n",
+    "plt.xlabel(r'Relative distance (nm)')\n",
     "plt.ylabel(r'Potential/$k_B T$ (reduced)')\n",
     "#plt.yticks([])\n",
     "#plt.savefig('patchyParticles_potential.pdf', bbox_inches='tight')"
