Added orientation and other corrections to STMV potential

--- a/examples/applications/STMV/patchyParticleSTMV.ipynb
+++ b/examples/applications/STMV/patchyParticleSTMV.ipynb
@@ -100,9 +100,9 @@
    "outputs": [],
    "source": [
     "# Integrate the particles, save to .xyz to produce VMD output (additional overhead)\n",
-    "timesteps = 5000000\n",
+    "timesteps = 2*500000 #5000000\n",
     "stride = 250 #1000\n",
-    "datafile  = open('../../data/vmd/patchyParticleSTMV.xyz', 'w')\n",
+    "datafile  = open('../../../data/vmd/patchyParticleSTMV.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(8*len(partlist)) + '\\n')\n",
@@ -132,7 +132,7 @@
     "# Generate TCL script to visualize with VMD\n",
     "msmrdvis.generateTCL_patchyParticleSTMV(numparticles = numparticles, \n",
     "                                     outfname = \"patchyParticleSTMV\", \n",
-    "                                     tclfname = \"../../data/vmd/patchyParticleSTMV_2vmd.tcl\")\n",
+    "                                     tclfname = \"../../../data/vmd/patchyParticleSTMV_2vmd.tcl\")\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
