Generalized gaussians3D potential

--- a/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
+++ b/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
@@ -20,7 +20,7 @@
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
     "from msmrd2.integrators import langevin \n",
-    "from msmrd2.potentials import WCA"
+    "from msmrd2.potentials import WCA, gaussians3D"
    ]
   },
   {
@@ -110,6 +110,19 @@
     "potentialWCA = WCA(epsilon, sigma)\n",
     "potentialWCA.setForceCapValue(forceCapVal)\n",
     "integrator.setPairPotential(potentialWCA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define external potential\n",
+    "minimas = [np.array([0.,0.,0.])]\n",
+    "stddevs = [np.array([5.,5.,5.])]\n",
+    "scalefactor = 1\n",
+    "oneMinima = gaussians3D(minimas, stddevs, scalefactor)"
    ]
   },
   {
