Added selective external gaussian potential by type

--- a/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
+++ b/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
@@ -121,8 +121,10 @@
     "# Define external potential\n",
     "minimas = [np.array([0.,0.,0.])]\n",
     "stddevs = [np.array([5.,5.,5.])]\n",
+    "partTypes = [1] # Only acts on particle types one\n",
     "scalefactor = 1\n",
-    "oneMinima = gaussians3D(minimas, stddevs, scalefactor)"
+    "externalPotential = gaussians3D(minimas, stddevs, partTypes, scalefactor)\n",
+    "integrator.setExternalPotential(externalPotential)"
    ]
   },
   {
