added harmonic potential

--- a/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
+++ b/examples/applications/Mori-Zwanzig/Mori-Zwanzig.ipynb
@@ -20,7 +20,7 @@
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
     "from msmrd2.integrators import langevin \n",
-    "from msmrd2.potentials import WCA, gaussians3D"
+    "from msmrd2.potentials import WCA, harmonic"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Lennard-Jones potential (rm=2^(1/6)sigma)\n",
+    "# Define WCA potential (rm=2^(1/6)sigma)\n",
     "epsilon = 1.0\n",
     "rm = 1.0\n",
     "sigma = rm * 2**(-1/6)\n",
@@ -119,11 +119,11 @@
    "outputs": [],
    "source": [
     "# Define external potential\n",
-    "minimas = [np.array([0.,0.,0.])]\n",
-    "stddevs = [np.array([5.,5.,5.])]\n",
+    "minima = np.array([0.,0.,0.])\n",
+    "kconstant = np.array([0.1,0.1,0.1])\n",
     "partTypes = [1] # Only acts on particle types one\n",
     "scalefactor = 1\n",
-    "externalPotential = gaussians3D(minimas, stddevs, partTypes, scalefactor)\n",
+    "externalPotential = harmonic(minima, kconstant, partTypes, scalefactor)\n",
     "integrator.setExternalPotential(externalPotential)"
    ]
   },
